objects/emptracing__Employee_PersonAccount_FieldMapping__mdt.object
<CustomObject>
    <description>The Employee Person Account Field Mapping custom metadata type allows you to configure the mapping of the Employee object field to the Person Account object field.</description>
    <fields>
        <fullName>emptracing__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this configuration is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>emptracing__Employee_Field__c</fullName>
        <description>The Employee object field name to which the Person Account object field is mapped</description>
        <label>Employee Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>emptracing__PersonAccount_Field__c</fullName>
        <description>The Person Account object field name to which the Employee object field name is mapped</description>
        <label>Person Account Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Employee Person Account Field Mapping</label>
    <listViews>
        <fullName>emptracing__All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>emptracing__Employee_Field__c</columns>
        <columns>emptracing__PersonAccount_Field__c</columns>
        <columns>emptracing__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Employee Person Account Field Mappings</pluralLabel>
</CustomObject>